update complete rmf/ltf v.1

--- a/src/app/login/signin/signin.component.html
+++ b/src/app/login/signin/signin.component.html
@@ -33,7 +33,7 @@
               <div class="input-wrapper">
                 <input id="name" name="name" maxlength="15" type="text" formControlName="username">
                 <div class="form-control-feedback" *ngIf="this.formsighin.controls.username.errors && (this.formsighin.controls.username.touched)">
-                  <p *ngIf="this.formsighin.controls.username.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formsighin.controls.username.errors.required || this.formsighin.controls.username.errors?.minlength">กรุณากรอกข้อมูลให้ครบถ้วน</p>
                   <!-- <p *ngIf="this.formsighin.controls.username.errors.pattern">อย่างน้อย 8 ตัวอักษร รวมทั้งตัวเลข</p> -->
                 </div>
               </div>
@@ -44,7 +44,7 @@
               <div class="input-wrapper ">
                 <input id="password" name="password" maxlength="15" type="password" formControlName="password">
                 <div class="form-control-feedback" *ngIf="this.formsighin.controls.password.errors && (this.formsighin.controls.password.touched)">
-                  <p *ngIf="this.formsighin.controls.password.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formsighin.controls.password.errors.required || this.formsighin.controls.password.errors?.minlength">กรุณากรอกข้อมูลให้ครบถ้วน</p>
                   <!-- <p *ngIf="this.formsighin.controls.password.errors.pattern">(UpperCase, LowerCase, Number/SpecialChar and
                     min 8 Chars)</p> -->
                 </div>
@@ -66,7 +66,7 @@
           <div class="row justify-content-center mb-md-3">
             <div class="col-md-12">
               <div class="btn-wrapper-left">
-                <button class="btn-med btn-confirm-login" type="submit">
+                <button class="btn-med btn-confirm-login btn" type="submit" [disabled]="loading">
                   <!-- (click)="checkpage('submit')" [routerLink]="['/myport']" -->
                   <p>
                     {{ 'BUTTON.signin' | translate }}
