--- a/src/app/profile/changepassword/changepassword.component.html
+++ b/src/app/profile/changepassword/changepassword.component.html
@@ -57,8 +57,8 @@
                                 <input id="currentpassword" name="currentpassword" maxlength="16" type="password" class="bg-gray" formControlName="currentpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.currentpassword.errors && ( this.formchangepass.controls.currentpassword.touched)">
                                     <p *ngIf="this.formchangepass.controls.currentpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.pattern">(UpperCase, LowerCase,
-                                        Number/SpecialChar and min 8 Chars)</p>
+                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
+                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
                                 </div>
                             </div>
                         </div>
@@ -73,8 +73,8 @@
                                 <input id="newpassword" name="newpassword" maxlength="16" type="password" class="bg-gray" formControlName="newpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.newpassword.errors && ( this.formchangepass.controls.newpassword.touched)">
                                     <p *ngIf="this.formchangepass.controls.newpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.pattern">(UpperCase, LowerCase,
-                                        Number/SpecialChar and min 8 Chars)</p>
+                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
+                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
                                 </div>
                             </div>
                         </div>
@@ -89,8 +89,8 @@
                                 <input id="confirmpassword" name="confirmpassword" maxlength="16" type="password" class="bg-gray" formControlName="confirmpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.confirmpassword.errors && ( this.formchangepass.controls.confirmpassword.touched)">
                                     <p *ngIf="this.formchangepass.controls.confirmpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.pattern">(UpperCase, LowerCase,
-                                        Number/SpecialChar and min 8 Chars)</p>
+                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
+                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
                                     <p *ngIf="cpwd.hasError('invalid')">รหัสไม่ตรงกัน</p>
                                 </div>
                             </div>
@@ -197,3 +197,27 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
+
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;" *ngIf="message">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">เปลี่ยนรหัสผ่านล้มเหลว</h4>
+            </div>
+            <div class="modal-body" id="content-scroll-1">
+              <h3>{{ message }}</h3>
+            </div>
+            <div class="modal-footer" style="display: block;">
+              <div class="row justify-content-end">
+                <div class="col-sm-6">
+                  <button class="btn-med btn-primary" data-dismiss="modal">
+                    <p style="margin-top: 7px;">ตกลง
+                      <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </p>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
