--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -918,7 +918,7 @@ background-color: $color-secondary;
     }
     span{
         color: $color-primary;
-        display: block;
+        display: inline-block;
         @media screen and (max-width: 767px) {
             margin-bottom: 20px;
           }
