--- a/src/app/login/changepasswordlogin/changepasswordlogin.component.html
+++ b/src/app/login/changepasswordlogin/changepasswordlogin.component.html
@@ -213,7 +213,7 @@
 </div>
 
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="dialog" style="z-index: 9999;" *ngIf="message">
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="dialog" style="z-index: 9999;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
