--- a/src/app/login/forgotpassword/forgotpassword.component.html
+++ b/src/app/login/forgotpassword/forgotpassword.component.html
@@ -99,8 +99,7 @@
         <h4 class="modal-title">รีเซ็ตรหัสผ่าน</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
-        <h3>fundchoiceuat.lhfund.co.th ได้รับข้อมูลการขอเปลี่ยนรหัสผ่านของคุณเรียบร้อยแล้ว <br> ระบบจะส่งอีเมลรายละเอียดการสมัครให้คุณ
-          ภายใน 24 ชั่วโมง หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ</h3>
+        <h3>ระบบจะส่งอีเมลรายละเอียดการตั้งหรัสผ่านใหม่ หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ</h3>
       </div>
       <div class="modal-footer" style="display: block;">
         <div class="row justify-content-end">
@@ -116,7 +115,7 @@
     </div>
   </div>
 </div>
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;"  *ngIf="message">
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;" *ngIf="message">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
