--- a/src/app/report/past-events/past-events.component.html
+++ b/src/app/report/past-events/past-events.component.html
@@ -1,3 +1,10 @@
+<style>
+  tbody tr.bgforlhfund:nth-child(even) {
+    background: #fafafa
+  }
+
+  /* tbody tr.bgforlhfund:nth-child(odd) {background: #FFF} */
+</style>
 <div class="fund-table-wrapper">
   <div class="heading-section">
     <div class="detail-head-wrapper">
@@ -29,7 +36,8 @@
           <div class="select-wrapper inline-block">
             <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
               <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }}</option>
+                }}
+              </option>
             </select>
           </div>
         </div>
@@ -43,7 +51,7 @@
           <p>{{ 'CONTENT.address' | translate }}</p>
           <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
-        
+
       </div>
     </div>
   </div>
@@ -59,10 +67,11 @@
           </div>
           <div class="col-md-6">
             <div class="select-wrapper inline-block">
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">แสดงทุกกลุ่ม</option>
-                <option value="36">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
-                <option value="29">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+              <select id="fundtype" name="fundtype" (change)="changefundtype()" [(ngModel)]="fundtype">
+                <option [value]="0">แสดงทุกกลุ่ม</option>
+                <option *ngFor="let fundtypelist of Fundtypelist; let i = index" [value]="fundtypelist.Id">{{ fundtypelist.Name
+                  }}
+                </option>
               </select>
             </div>
           </div>
@@ -75,11 +84,13 @@
           <div class="col-md-6">
             <div class="select-wrapper inline-block">
 
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">แสดงทุกกองทุน</option>
-                <option value="36">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
-                <option value="29">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+              <select id="fundname" name="fundname" [(ngModel)]="fundname">
+                <option [value]="0">แสดงทุกกองทุน</option>
+                <option *ngFor="let fundnamelist of Fundnamelist; let i = index" [ngValue]="fundnamelist">{{ fundnamelist.FundName
+                  }}
+                </option>
               </select>
+
             </div>
           </div>
         </div>
@@ -109,14 +120,14 @@
 
         <div class="row">
           <div class="col-md-3 col-6 offset-md-4">
-            <button class="btn-med btn-primary">
+            <button class="btn-med btn-primary btn" [disabled]="loading" (click)="OnSubmitd()">
               {{ 'BUTTON.ok' | translate }}
               <i class="fa fa-angle-right" aria-hidden="true"></i>
 
             </button>
           </div>
           <div class="col-md-3 col-6">
-            <button class="btn-med btn-cancel">
+            <button class="btn-med btn-cancel" (click)="reset()">
               {{ 'BUTTON.restore' | translate }}
               <i class="fa fa-angle-right" aria-hidden="true"></i>
 
@@ -134,79 +145,78 @@
         <thead>
           <tr>
             <th>
-              วันที่
+              ชื่อกองทุน
+            </th>
+            <th>
+              วันและเวลา
+              <br/>ที่ทำการ
+            </th>
+            <th>
+              วันที่มีผล
+            </th>
+            <th>
+              ประเภท
             </th>
             <th>
               รายการ
             </th>
             <th>
-              มูลค่าต่อหน่วย
+              บาท (THB)
             </th>
             <th>
-              จำนวนหน่วย
+              หน่วย (Unit)
+            </th>
+            <th>
+              กองทุน
+              <br/>ปลายทาง
             </th>
 
           </tr>
         </thead>
-        <tbody>
-          <tr class="topic">
+        <tbody *ngIf="statementreport">
+          <!-- <tr class="topic">
             <th colspan="4">
-              กองทุนรวมหุ้นระยะยาว
+              {{ group.FundName}}
             </th>
-          </tr>
+          </tr> -->
+          <ng-container *ngFor="let list of statementlist | paginate: { itemsPerPage: 10, currentPage: p } ; let i = index">
 
-          <tr class="line">
-            <td colspan="4">
-              กองทุนที่เน้นตราสารเงิน (KFCASH)
-            </td>
-          </tr>
-          <tr>
-            <td class="text-left">
-              07/06/2561
-            </td>
-            <td class="text-right">
-              SUB
-            </td>
-            <td class="text-right">
-              11.4523
-            </td>
-            <td class="txt-right">
-              110.4523
-              <!-- </td>
-            <td class="txt-right">
-              17,055.45
-            </td>
-            <td class="txt-right">
-              &nbsp;
-            </td>
-            <td class="txt-right">
-              &nbsp;
-            </td> -->
-          </tr>
-          <tr>
-            <td class="text-left">
-              07/06/2561
-            </td>
-            <td class="text-right">
-              SUB
-            </td>
-            <td class="text-right">
-              11.4523
-            </td>
-            <td class="txt-right">
-              110.4523
-            </td>
-            <!-- <td class="txt-right">
-              17,055.45
-            </td>
-            <td class="txt-right">
-              &nbsp;
-            </td>
-            <td class="txt-right">
-              &nbsp;
-            </td> -->
-          </tr>
-          <tr class="summary">
+
+
+            <tr class="line" *ngIf="list.FundName">
+              <td colspan="11">
+                {{ list.FundName}} : {{ list.FundCode}} 
+              </td>
+            </tr>
+            <tr class="bgforlhfund">
+              <td class="text-left">
+                &nbsp;
+              </td>
+              <td class="text-left">
+                {{list.OrderDate | datethai}}, {{list.OrderTime | time}}
+              </td>
+              <td class="text-right">
+                {{list.EffectiveDate | datethai}}
+              </td>
+              <td class="text-right">
+                {{list.OrderUnitType}}
+              </td>
+              <td class="txt-right">
+                {{list.TxType | type}}
+              </td>
+              <td class="txt-right">
+                {{list.AllotedAmount | tofix}}
+              </td>
+              <td class="txt-right">
+                {{list.AllotedUnit | tofix4}}
+              </td>
+              <td class="txt-right">
+                <ng-container *ngIf="list.SourceFundCode && list.TxType == 'Switching Out' ">
+                  {{list.SourceFundCode}}
+                </ng-container>
+              </td>
+            </tr>
+            <!-- <tr class="summary">
             <th colspan="3">
               รวม : (กองทุนรวมหุ้นระยะยาว) การลงทุน (บาท) ณ วันที่ 24/07/2561
             </th>
@@ -214,10 +224,13 @@
               34,110.90
             </th>
 
-          </tr>
+          </tr> -->
+          </ng-container>
         </tbody>
       </table>
     </div>
+    <div *ngIf="statementlist"><pagination-controls [autoHide]="true" (pageChange)="p = $event"></pagination-controls></div>
+    
     <div class="row">
       <div class="col-md-12">
         <p class="color-red no-margin">*มูลค่ารอการจัดสรรนี้รวมอยู่ในมูลค่าการลงทุนแล้ว</p>
