--- a/src/assets/Content/default/css/main.css
+++ b/src/assets/Content/default/css/main.css
@@ -1693,6 +1693,16 @@ if it's not present, don't show loader */
 .form-group {
   margin: 0; }
 
+.ngx-pagination span {
+  color: unset !important; }
+
+.ngx-pagination .current {
+  background: #1CA59B !important; }
+
+.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+  width: 100% !important;
+  margin-bottom: 25px; }
+
 #header-wrapper {
   width: 100%;
   height: auto;
@@ -1739,7 +1749,7 @@ input[type="password"] {
   height: 40px;
   margin: 0 auto;
   padding: 8px 10px 7px 10px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid #f5f5f5;
   font-size: 22px; }
   @media screen and (max-width: 992px) {
     input[type="password"] {
@@ -2304,7 +2314,7 @@ input[type=reset] {
         font-weight: normal;
         text-align: left;
         color: #1CA59B;
-        background-color: transparent; }
+        background-color: #BBEEFF; }
         .table-responsive .table.table-nav > tbody tr.topic th.custom-label {
           border: unset;
           text-align: right;
