--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -146,8 +146,19 @@ if it's not present, don't show loader */
 }
 .form-group{
     margin: 0;
-}   
-        
+}
+.ngx-pagination {
+    span{
+        color: unset !important;
+    }
+    .current{
+        background: $color-primary !important;
+    }
+}
+.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+    width: 100% !important;
+    margin-bottom: 25px;
+}
             
 
 
@@ -206,7 +217,7 @@ input[type="password"] {
     height: 40px;
     margin: 0 auto;
     padding: 8px 10px 7px 10px;
-    border: 1px solid $color-secondary;
+    border: 1px solid #f5f5f5;
     font-size: $text-content;
 
     @media screen and (max-width: 992px) {
@@ -811,7 +822,7 @@ input[type=reset] {
                             color: $color-primary;
                             // border-top: 2px solid #f5f5f5;
                             // border-bottom: 2px solid #f5f5f5;
-                            background-color: transparent;
+                            background-color: #BBEEFF;
                             
 
                             &.custom-label {
